Fix misalignment between tableau and foundations

--- a/src/foundations/Foundations.css
+++ b/src/foundations/Foundations.css
@@ -4,8 +4,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	/* TODO: Find out why cards aren't aligned with tableau */
-	gap: 10px;
+	gap: 8px;
 }
 
 .foundation-pile {
